installed a few dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "bluephone",
         "Jomo",
+        "Montserat",
         "redphone",
         "sidebag",
         "whitephone"
