"Updated .vscode/settings.json and refactored SearchBar.jsx to SideBar.jsx, changing its functionality and adding new assets and links."

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "addbag",
         "Adress",
         "bluephone",
+        "cartbag",
         "Jomo",
+        "Macbook",
         "Montserat",
         "redphone",
         "sidebag",
